# Autonomous-Research-Assistant--Bachelor-Thesis

./: .gitignore  README.md
systematic-review-system/: .env.example  .gitignore  CD008874_protocol.json  CLAUDE.md  Makefile  README.md  config.yaml  example_protocol.json  generate_figures.py  generate_graphs.py  main.py  print_tables.py  pyproject.toml  requirements.txt  rescreen_cascade_dta.py  rescreen_dta.py  run_comparative.py  run_orchestrator.py  test1.json  test2.json  test3.json  test_fetch_pmids.py  test_large_protocol.json
systematic-review-system/cascade_rc/: CHANGELOG.md  README.md  config.py  preflight.py  run_parallel.py  run_pipeline.py
systematic-review-system/config/: __init__.py  seed_examples.json  settings.py
systematic-review-system/evaluation/: benchmark_evaluator.py  build_tables.py  sac_metric.py
systematic-review-system/frontend/: server.py
systematic-review-system/graphify-out/: .graphify_ast.json  .graphify_chunk_files_00.txt  .graphify_chunk_files_01.txt  .graphify_chunk_files_02.txt  .graphify_chunk_files_03.txt  .graphify_chunk_files_04.txt  .graphify_chunk_files_05.txt  .graphify_chunk_files_06.txt  .graphify_chunk_files_07.txt  .graphify_chunk_files_08.txt  .graphify_chunk_files_09.txt  .graphify_chunk_files_10.txt  .graphify_chunk_files_11.txt  .graphify_chunk_files_12.txt  .graphify_chunk_files_13.txt  .graphify_chunk_files_14.txt  .graphify_chunk_files_15.txt  .graphify_chunk_files_16.txt  .graphify_chunk_files_17.txt  .graphify_chunk_files_18.txt  .graphify_chunk_files_19.txt  .graphify_chunk_files_20.txt  .graphify_root  (+8 more)
(+250 files in other folders)
