[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systematic-review-system"
version = "0.1.0"
requires-python = ">=3.11,<3.15"
dependencies = [
    "anthropic>=0.49.0",
    "openai>=1.30.0",
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.7.4",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.0",
    "nltk>=3.8.0",
    "pdfminer.six>=20221105",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "python-Levenshtein>=0.21.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "aiohttp>=3.9.0",
    "biopython>=1.81",
]

[project.optional-dependencies]
cascade_rc = [
    "numpy==1.26.4",
    "scipy==1.13.1",
    "pandas==2.2.2",
    "pyarrow==16.1.0",
    "scikit-learn==1.5.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.4",
    "confseq==0.0.11",
    "stable-baselines3==2.3.2",
    "gymnasium==0.29.1",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "joblib==1.4.2",
    "tqdm==4.66.4",
    "requests==2.32.3",
    "tenacity==8.3.0",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "hypothesis==6.103.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cascade_rc*", "config*", "infrastructure*", "models*", "orchestrators*", "tier1_search*", "tier2_screening*", "tier3_synthesis*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
